--- a/lab-6/index.html
+++ b/lab-6/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Converter Converter</h1>
+        <h1>Currency Converter</h1>
     </header>
     <nav>
         <ul>
@@ -39,17 +39,16 @@
     <footer>
         <h3>Addendum</h3>
         <p>
-            <strong>Project Overview:</strong> This web page features a temperature converter tool, designed to convert temperatures between Celsius and Fahrenheit. The user can input a temperature value, select the conversion direction, and receive the converted temperature as output.
+            <strong>Project Overview:</strong> The web page includes a currency conversion tool for converting money between USD and INR. Users can input an amount, choose the conversion direction, and get the converted amount in the respective currency as output.
         </p>
         <p>
-            <strong>Implementation Details:</strong> The temperature converter is implemented using JavaScript. It involves capturing user input from an HTML form, processing the conversion in JavaScript based on the selected option (Celsius to Fahrenheit or vice versa), and displaying the result on the page.
+            <strong>Implementation Details:</strong> The JavaScript-based currency converter is designed to gather user input from an HTML form, perform the conversion process in JavaScript according to the chosen option (such as from INR to USD or vice versa), and then showcase the outcome on the webpage.
         </p>
         <p>
-            <strong>Challenges and Solutions:</strong> A significant challenge was ensuring accurate conversion and handling invalid inputs. This was addressed by implementing input validation and using precise formulas for temperature conversion. Another challenge was creating a responsive and intuitive user interface, which was achieved using CSS Grid layout and modern styling techniques.
+            <strong>Challenges and Solutions:</strong> Ensuring precise currency conversion and managing invalid inputs posed a significant challenge during development. To address this, input validation was implemented alongside accurate currency conversion formulas. Another hurdle was crafting a responsive and user-friendly interface, which was successfully achieved through the use of CSS Grid layout and contemporary styling methods.
         </p>
         <p>
-            <strong>Learning Outcomes:</strong> Through this project, I gained a deeper understanding of JavaScript event handling, form input processing, and responsive web design using CSS Grid. It also reinforced the importance of user input validation and clear user feedback in web applications.
-        </p>
+            <strong>Learning Outcomes:</strong> This project enhanced my knowledge of JavaScript event handling, processing form inputs, and creating responsive web designs using CSS Grid. It also underscored the significance of user input validation and providing clear feedback to users in web applications.
             <p>Last updated: 
                 <span id="lastModified"></span>
             </p>
