--- a/final/index.html
+++ b/final/index.html
@@ -20,27 +20,27 @@
     <div id="addendum">
         <h2>Addendum</h3>
         <ul>
-        <li>The journey of creating the "Revenge of Lights Out" game was an enlightening experience that involved a blend of creative decision-making and problem-solving.</li>
-        <li>The primary goal was to develop an interactive and engaging game that offers a fun challenge to players.</li>
+        <li>The process of creating the "Revenge of Lights Out" game provided valuable insights into blending creativity with problem-solving.</li>
+        <li>The primary objective was to craft an interactive and captivating game that presents an enjoyable challenge to players.</li>
         </ul>
-        <h3>Creative Choices:</h4>
+        <h3>Creative Decisions:</h4>
         <ul>
-            <li>Game Design: The decision to use a 5x5 grid was made to provide a moderate level of difficulty, balancing complexity and accessibility for players of varying skill levels.</li>
-            <li>User Interface: A minimalist design approach was chosen for the user interface to keep the focus on the gameplay. This choice was also in line with modern design trends favoring simplicity and usability.</li>
-            <li>Feedback Mechanism: The use of a modal window to announce the game's completion was intended to give players a clear and satisfying indication of their success.</li>
+            <li>Game Design: Opting for a 5x5 grid aimed to offer a balanced level of difficulty, catering to players with different skill levels while maintaining a manageable complexity.</li>
+            <li>User Interface: Embracing a minimalist design approach for the interface focused on enhancing gameplay immersion. This choice aligned with contemporary design trends emphasizing simplicity and user-friendliness.</li>
+            <li>Feedback System: Implementing a modal window to signify game completion aimed to deliver a clear and rewarding experience for players.</li>
         </ul>
-    
-        <h3>Challenges and Solutions:</h4>
-        <ul>
-            <li>Randomizing the Board: One of the initial challenges was implementing an effective way to shuffle the board at the start of each game. <br>This was overcome by introducing a randomization function that ensures a new experience in each game session.</li>
-            <li>Ensuring Playability: Ensuring that the game was always solvable after shuffling was a complex task. This issue was addressed through careful testing and tweaking of the shuffling algorithm.</li>
-        </ul>
-    
-        <h3>Insights Gained:</h4>
-        <ul>
-            <li>User-Centric Design: The importance of keeping the user experience at the forefront became clear. Simple, intuitive gameplay and interface design significantly enhance player engagement.</li>
-            <li>Testing is Crucial: Rigorous testing was instrumental in identifying and solving gameplay and usability issues, highlighting the importance of thorough testing in game development.</li>
-        </ul>
+            <h3>Challenges and Solutions:</h4>
+    <ul>
+        <li>Board Randomization: Initially, generating randomized board layouts posed a challenge. <br>To tackle this, a randomization function was introduced to ensure unique game setups in each session.</li>
+        <li>Playability Assurance: Ensuring that the game remained solvable post-randomization required meticulous testing and refining of the shuffling algorithm.</li>
+    </ul>
+
+    <h3>Key Learnings:</h4>
+    <ul>
+        <li>User-Centric Design: Emphasizing user experience proved pivotal. Simple and intuitive gameplay and interface design significantly heightened player engagement.</li>
+        <li>Testing Importance: Thorough testing played a crucial role in identifying and resolving gameplay and usability issues, underscoring the significance of comprehensive testing in game development.</li>
+    </ul>
+
     </div>
     <div class="head">
     <footer>
